--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -300,12 +300,216 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test =1"
+    "---\n",
+    "- 뉴스 헤더와 시간 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "뉴스 정보가 성공적으로 저장되었습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
+    "import time\n",
+    "\n",
+    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "\n",
+    "# 크롬 드라이버 다운로드 및 실행 경로 지정 (자신의 크롬 드라이버 경로로 변경)\n",
+    "chrome_driver_path = 'C:\\\\education\\\\ml_dev\\\\coin\\\\jh_-\\\\investing\\\\chromedriver-win64'\n",
+    "\n",
+    "# Selenium으로 웹페이지 열기 함수\n",
+    "def get_news_info(url):\n",
+    "    driver = webdriver.Chrome(options=chrome_options)\n",
+    "    driver.get(url)\n",
+    "    time.sleep(1)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
+    "    \n",
+    "    # 현재 페이지 소스코드 가져오기\n",
+    "    page_source = driver.page_source\n",
+    "    \n",
+    "    # BeautifulSoup을 사용하여 뉴스 제목과 올라온 시간 추출\n",
+    "    soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "    \n",
+    "    news_info_list = []\n",
+    "    \n",
+    "    # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
+    "    news_elements = soup.select('.textDiv')\n",
+    "    \n",
+    "    for element in news_elements:\n",
+    "        # 뉴스 제목 추출\n",
+    "        title = element.select_one('.title').text.strip()\n",
+    "        \n",
+    "        # 올라온 시간 추출\n",
+    "        time_element = element.select_one('.date')\n",
+    "        if time_element:\n",
+    "            time_info = time_element.text.strip()\n",
+    "        else:\n",
+    "            time_info = \"시간 정보 없음\"\n",
+    "        \n",
+    "        # 결과 리스트에 추가\n",
+    "        news_info_list.append({'title': title, 'time': time_info})\n",
+    "    \n",
+    "    # 드라이버 종료\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    return news_info_list\n",
+    "\n",
+    "# 여러 페이지의 뉴스 정보를 저장할 리스트\n",
+    "all_news_info = []\n",
+    "\n",
+    "# 1부터 2까지의 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
+    "for page_number in range(1, 2):\n",
+    "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
+    "    news_info = get_news_info(url)\n",
+    "    all_news_info.extend(news_info)\n",
+    "\n",
+    "# 뉴스 정보를 JSON 파일로 저장\n",
+    "result_data = {'news_info': all_news_info}\n",
+    "with open('3all_cryptocurrency_news_info.json', 'w', encoding='utf-8') as json_file:\n",
+    "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 실시간으로 해당 뉴스 페이지에서 뉴스가 업로드되면 헤더와 업로드시간을 찍어주는 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".date\"}\n  (Session info: chrome-headless-shell=120.0.6099.225); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n\tGetHandleVerifier [0x00007FF6B4952142+3514994]\n\t(No symbol) [0x00007FF6B4570CE2]\n\t(No symbol) [0x00007FF6B44176AA]\n\t(No symbol) [0x00007FF6B4461860]\n\t(No symbol) [0x00007FF6B446197C]\n\t(No symbol) [0x00007FF6B44564FC]\n\t(No symbol) [0x00007FF6B448602F]\n\t(No symbol) [0x00007FF6B44563B6]\n\t(No symbol) [0x00007FF6B4486490]\n\t(No symbol) [0x00007FF6B44A28F6]\n\t(No symbol) [0x00007FF6B4485D93]\n\t(No symbol) [0x00007FF6B4454BDC]\n\t(No symbol) [0x00007FF6B4455C64]\n\tGetHandleVerifier [0x00007FF6B497E16B+3695259]\n\tGetHandleVerifier [0x00007FF6B49D6737+4057191]\n\tGetHandleVerifier [0x00007FF6B49CE4E3+4023827]\n\tGetHandleVerifier [0x00007FF6B46A04F9+689705]\n\t(No symbol) [0x00007FF6B457C048]\n\t(No symbol) [0x00007FF6B4578044]\n\t(No symbol) [0x00007FF6B45781C9]\n\t(No symbol) [0x00007FF6B45688C4]\n\tBaseThreadInitThunk [0x00007FFCADC8257D+29]\n\tRtlUserThreadStart [0x00007FFCAF06AA58+40]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 87\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m news_info_list\n\u001b[0;32m     86\u001b[0m \u001b[38;5;66;03m# 초기 뉴스 정보 가져오기\u001b[39;00m\n\u001b[1;32m---> 87\u001b[0m driver, initial_news_info \u001b[38;5;241m=\u001b[39m \u001b[43mget_news_info\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://www.investing.com/news/cryptocurrency-news/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m초기 뉴스 정보:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28mprint\u001b[39m(initial_news_info)\n",
+      "Cell \u001b[1;32mIn[5], line 32\u001b[0m, in \u001b[0;36mget_news_info\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m news_elements:\n\u001b[0;32m     31\u001b[0m     title \u001b[38;5;241m=\u001b[39m element\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m---> 32\u001b[0m     time_info \u001b[38;5;241m=\u001b[39m \u001b[43melement\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCLASS_NAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     33\u001b[0m     news_info_list\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m: title, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m: time_info})\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m# 드라이버 반환\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\ml-dev\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:417\u001b[0m, in \u001b[0;36mWebElement.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    414\u001b[0m     by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[0;32m    415\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m--> 417\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_CHILD_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\ml-dev\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:395\u001b[0m, in \u001b[0;36mWebElement._execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    393\u001b[0m     params \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    394\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id\n\u001b[1;32m--> 395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\ml-dev\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:348\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    346\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 348\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    349\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    350\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\ml-dev\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".date\"}\n  (Session info: chrome-headless-shell=120.0.6099.225); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n\tGetHandleVerifier [0x00007FF6B4952142+3514994]\n\t(No symbol) [0x00007FF6B4570CE2]\n\t(No symbol) [0x00007FF6B44176AA]\n\t(No symbol) [0x00007FF6B4461860]\n\t(No symbol) [0x00007FF6B446197C]\n\t(No symbol) [0x00007FF6B44564FC]\n\t(No symbol) [0x00007FF6B448602F]\n\t(No symbol) [0x00007FF6B44563B6]\n\t(No symbol) [0x00007FF6B4486490]\n\t(No symbol) [0x00007FF6B44A28F6]\n\t(No symbol) [0x00007FF6B4485D93]\n\t(No symbol) [0x00007FF6B4454BDC]\n\t(No symbol) [0x00007FF6B4455C64]\n\tGetHandleVerifier [0x00007FF6B497E16B+3695259]\n\tGetHandleVerifier [0x00007FF6B49D6737+4057191]\n\tGetHandleVerifier [0x00007FF6B49CE4E3+4023827]\n\tGetHandleVerifier [0x00007FF6B46A04F9+689705]\n\t(No symbol) [0x00007FF6B457C048]\n\t(No symbol) [0x00007FF6B4578044]\n\t(No symbol) [0x00007FF6B45781C9]\n\t(No symbol) [0x00007FF6B45688C4]\n\tBaseThreadInitThunk [0x00007FFCADC8257D+29]\n\tRtlUserThreadStart [0x00007FFCAF06AA58+40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import json\n",
+    "import time\n",
+    "\n",
+    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "\n",
+    "# 크롬 드라이버 다운로드 및 실행 경로 지정 (자신의 크롬 드라이버 경로로 변경)\n",
+    "chrome_driver_path = 'C:\\\\education\\\\ml_dev\\\\coin\\\\jh_-\\\\investing\\\\chromedriver-win64'\n",
+    "\n",
+    "# Selenium으로 웹페이지 열기 함수\n",
+    "def get_news_info(url):\n",
+    "    driver = webdriver.Chrome(options=chrome_options)\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # 페이지가 로딩되기를 기다림\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "    wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'textDiv')))\n",
+    "    \n",
+    "    news_info_list = []\n",
+    "    \n",
+    "    # 최초에는 모든 뉴스 정보 가져오기\n",
+    "    news_elements = driver.find_elements(By.CLASS_NAME, 'textDiv')\n",
+    "    \n",
+    "    for element in news_elements:\n",
+    "        title = element.find_element(By.CLASS_NAME, 'title').text.strip()\n",
+    "        time_info = element.find_element(By.CLASS_NAME, 'date').text.strip()\n",
+    "        news_info_list.append({'title': title, 'time': time_info})\n",
+    "    \n",
+    "    # 드라이버 반환\n",
+    "    return driver, news_info_list\n",
+    "\n",
+    "def update_news_info(driver, json_file_path, wait_time=10, refresh_interval=60):\n",
+    "    while True:\n",
+    "        # 현재 뉴스 정보 가져오기\n",
+    "        current_info = get_news_info_on_same_driver(driver, wait_time)\n",
+    "        \n",
+    "        # JSON 파일 읽기 또는 초기화\n",
+    "        try:\n",
+    "            with open(json_file_path, 'r', encoding='utf-8') as json_file:\n",
+    "                previous_info = json.load(json_file)['news_info']\n",
+    "        except (FileNotFoundError, json.decoder.JSONDecodeError):\n",
+    "            previous_info = []\n",
+    "        \n",
+    "        # 이전 정보와 비교하여 새로운 뉴스가 있으면 업데이트\n",
+    "        new_news = [news for news in current_info if news not in previous_info]\n",
+    "        if new_news:\n",
+    "            print(\"새로운 뉴스가 업로드되었습니다:\")\n",
+    "            for news in new_news:\n",
+    "                print(news)\n",
+    "            \n",
+    "            # 이전 정보 업데이트\n",
+    "            previous_info = current_info\n",
+    "            \n",
+    "            # 새로운 뉴스 정보를 JSON 파일에 추가 또는 생성\n",
+    "            with open(json_file_path, 'w', encoding='utf-8') as json_file:\n",
+    "                json.dump({'news_info': previous_info}, json_file, ensure_ascii=False, indent=4)\n",
+    "            \n",
+    "        time.sleep(refresh_interval)\n",
+    "\n",
+    "def get_news_info_on_same_driver(driver, wait_time=10):\n",
+    "    # 현재 드라이버의 페이지를 새로고침\n",
+    "    driver.refresh()\n",
+    "    \n",
+    "    # 페이지가 로딩되기를 기다림\n",
+    "    wait = WebDriverWait(driver, wait_time)\n",
+    "    wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'textDiv')))\n",
+    "    \n",
+    "    news_info_list = []\n",
+    "    \n",
+    "    # 현재에는 모든 뉴스 정보 가져오기\n",
+    "    news_elements = driver.find_elements(By.CLASS_NAME, 'textDiv')\n",
+    "    \n",
+    "    for element in news_elements:\n",
+    "        title = element.find_element(By.CLASS_NAME, 'title').text.strip()\n",
+    "        time_info = element.find_element(By.CLASS_NAME, 'date').text.strip()\n",
+    "        news_info_list.append({'title': title, 'time': time_info})\n",
+    "    \n",
+    "    return news_info_list\n",
+    "\n",
+    "# 초기 뉴스 정보 가져오기\n",
+    "driver, initial_news_info = get_news_info(\"https://www.investing.com/news/cryptocurrency-news/\")\n",
+    "print(\"초기 뉴스 정보:\")\n",
+    "print(initial_news_info)\n",
+    "\n",
+    "# 뉴스 정보 업데이트\n",
+    "update_news_info(driver, \"realtime_cryptocurrency_news_info.json\")\n"
    ]
   }
  ],
