--- a/investing/investing_test.ipynb
+++ b/investing/investing_test.ipynb
@@ -510,82 +510,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "에러가 발생하여 프로그램을 종료합니다. 페이지: 1\n",
+      "페이지 3 크롤링 완료\n",
       "\n",
-      "총 0개의 뉴스 정보 크롤링 완료 \n",
-      "뉴스 정보가 성공적으로 저장되었습니다.\n"
+      "총 27개의 뉴스 정보 크롤링 완료 \n"
      ]
     }
    ],
    "source": [
-    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
-    "chrome_options = Options()\n",
-    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
+    "import time\n",
     "\n",
-    "# Selenium으로 웹페이지 열기 함수\n",
-    "def get_news_info(url):\n",
-    "    driver = webdriver.Chrome(options=chrome_options)\n",
-    "    driver.get(url)\n",
-    "    time.sleep(5)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
+    "def get_news_info(url, base_url=\"https://www.investing.com\"):\n",
+    "    try:\n",
+    "        headers = {'User-Agent': 'Mozilla/5.0'}  # 헤더 설정 추가\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        response.raise_for_status()\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "    # 현재 페이지 소스코드 가져오기\n",
-    "    page_source = driver.page_source\n",
+    "        news_info_list = []\n",
     "\n",
-    "    # BeautifulSoup을 사용하여 뉴스 본문 페이지 파싱\n",
-    "    soup = BeautifulSoup(page_source, 'html.parser')    \n",
+    "        # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
+    "        news_elements = soup.select('.textDiv')\n",
     "\n",
-    "    news_info_list = []\n",
+    "        for element in news_elements:\n",
+    "            title_element = element.select_one('.title')\n",
+    "            date_element = element.select_one('.date')\n",
     "\n",
-    "    # 뉴스 본문에 있는 헤더와 업로드 시간 가져오기\n",
-    "    header = soup.find()('h1', class_='articleHeader')\n",
-    "    upload_time = soup.find('div', class_='contentSectionDetails')\n",
+    "            if title_element and date_element:\n",
+    "                title_text = title_element.text.strip()\n",
+    "                date_text = date_element.text.strip()\n",
     "\n",
-    "    # 가져온 데이터를 딕셔너리에 저장하여 결과 리스트에 추가\n",
-    "    if header and upload_time:\n",
-    "        title_text = header.text.strip()\n",
-    "        time_text = upload_time.text.strip()\n",
-    "        news_info_list.append({'title': title_text, 'time': time_text})\n",
+    "                # 상세 페이지 URL 구성\n",
+    "                news_url = base_url + title_element['href']\n",
     "\n",
-    "    # 드라이버 종료\n",
-    "    driver.quit()\n",
+    "                # 상세 페이지로 이동하여 본문 내용을 크롤링\n",
+    "                news_response = requests.get(news_url, headers=headers)\n",
+    "                news_soup = BeautifulSoup(news_response.text, 'html.parser')\n",
+    "                news_content = news_soup.find('div', class_='WYSIWYG articlePage').text.strip()\n",
     "\n",
-    "    return news_info_list\n",
+    "                news_info_list.append({\n",
+    "                    'title': title_text,\n",
+    "                    'time': date_text,\n",
+    "                    'content': news_content\n",
+    "                })\n",
     "\n",
-    "    # except Exception as e:\n",
-    "    #     # 에러가 발생했을 때 현재 페이지 번호를 출력하고 예외를 다시 발생시킴\n",
-    "    #     print(f\"에러가 발생했습니다. 페이지: {url}\")\n",
-    "    #     raise e\n",
+    "        return news_info_list\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"에러가 발생했습니다. 페이지: {url}\")\n",
+    "        raise e\n",
     "\n",
     "# 여러 페이지의 뉴스 정보를 저장할 리스트\n",
     "all_news_info = []\n",
     "\n",
-    "# 1부터 2까지의 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
+    "# 각 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
     "for page_number in range(1, 3):\n",
     "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
     "    try:\n",
     "        news_info = get_news_info(url)\n",
     "        all_news_info.extend(news_info)\n",
+    "        \n",
+    "        # 너무 빠른 요청으로 인한 서버 부하를 방지하기 위해 대기\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "        print(f\"페이지 {page_number} 크롤링 완료\")\n",
     "    except Exception as e:\n",
-    "        # 에러가 발생했을 때 현재 페이지 번호를 출력하고 반복문을 종료\n",
     "        print(f\"에러가 발생하여 프로그램을 종료합니다. 페이지: {page_number}\")\n",
     "        break\n",
-    "    \n",
-    "# 총 몇개의 데이터를 가져왔는지 출력\n",
-    "print(f\"\\n총 {len(all_news_info)}개의 뉴스 정보 크롤링 완료 \")\n",
     "\n",
     "# 뉴스 정보를 JSON 파일로 저장\n",
     "result_data = {'news_info': all_news_info}\n",
-    "with open('all_cryptocurrency_news_info.json', 'w', encoding='utf-8') as json_file:\n",
+    "with open('all_crypto_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n"
+    "print(f\"\\n총 {len(all_news_info)}개의 뉴스 정보 크롤링 완료 \")"
    ]
   },
   {
@@ -627,85 +634,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "live_all_cryptocurrency_news_info.json 파일이 없으므로 새로 생성합니다.\n",
-      "live_all_cryptocurrency_news_info.json에 데이터 저장 완료\n",
-      "live_all_cryptocurrency_news_info.json에 데이터 저장 완료\n"
+      "뉴스 정보가 성공적으로 저장되었습니다. 파일명: cryptocurrency_news_2024-01-29.json\n"
      ]
     }
    ],
    "source": [
-    "def get_live_news_info(url):\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
+    "import time\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def get_news_info(url):\n",
     "    try:\n",
-    "        driver = webdriver.Chrome(options=chrome_options)\n",
-    "        driver.get(url)\n",
-    "        time.sleep(5)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
-    "\n",
-    "        # 현재 페이지 소스코드 가져오기\n",
-    "        page_source = driver.page_source\n",
-    "\n",
-    "        # BeautifulSoup을 사용하여 뉴스 제목과 올라온 시간 추출\n",
-    "        soup = BeautifulSoup(page_source, 'html.parser')    \n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
     "        news_info_list = []\n",
     "\n",
-    "        # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
-    "        news_elements = soup.select('.largeTitle') \n",
+    "        news_elements = soup.select('.largeTitle')\n",
     "\n",
     "        for element in news_elements:\n",
-    "            # largeTitle 클래스 내에서 모든 .title과 .date를 찾음\n",
     "            titles = element.select('.title')\n",
     "            dates = element.select('.date')\n",
     "\n",
-    "            # 뉴스 제목과 올라온 시간이 있는 경우에만 결과 리스트에 추가\n",
     "            for title, date in zip(titles, dates):\n",
     "                title_text = title.text.strip()\n",
     "                date_text = date.text.strip()\n",
     "                news_info_list.append({'title': title_text, 'time': date_text})\n",
     "\n",
-    "        # 드라이버 종료\n",
-    "        driver.quit()\n",
-    "\n",
     "        return news_info_list\n",
     "\n",
     "    except Exception as e:\n",
-    "        # 에러가 발생했을 때 현재 페이지 번호를 출력하고 예외를 다시 발생시킴\n",
     "        print(f\"에러가 발생했습니다. 페이지: {url}\")\n",
     "        raise e\n",
-    "def save_to_json(data, filename='live_all_cryptocurrency_news_info.json'):\n",
-    "    try:\n",
-    "        with open(filename, 'w', encoding='utf-8') as json_file:\n",
-    "            json.dump(data, json_file, ensure_ascii=False, indent=4)\n",
-    "        print(f\"{filename}에 데이터 저장 완료\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"파일 저장 중 오류 발생: {e}\")\n",
     "\n",
-    "def long_polling(url, filename='live_all_cryptocurrency_news_info.json'):\n",
-    "    if not os.path.exists(filename):\n",
-    "        print(f\"{filename} 파일이 없으므로 새로 생성합니다.\")\n",
-    "        save_to_json({'news_info': []}, filename)\n",
+    "def save_news_to_json(news_info):\n",
+    "    today_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "    filename = f\"cryptocurrency_news_{today_date}.json\"\n",
+    "    with open(filename, 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(news_info, json_file, ensure_ascii=False, indent=4)\n",
+    "    print(f\"뉴스 정보가 성공적으로 저장되었습니다. 파일명: {filename}\")\n",
     "\n",
+    "def main():\n",
+    "    url = \"https://www.investing.com/news/cryptocurrency-news\"\n",
     "    while True:\n",
-    "        live_news_info = get_live_news_info(url)\n",
-    "        if live_news_info:\n",
-    "            try:\n",
-    "                with open(filename, 'r', encoding='utf-8') as json_file:\n",
-    "                    data = json.load(json_file)\n",
-    "                    data['news_info'].extend(live_news_info)\n",
-    "                save_to_json(data, filename)\n",
-    "            except Exception as e:\n",
-    "                print(f\"파일 업데이트 중 오류 발생: {e}\")\n",
-    "        time.sleep(10)  # 10초마다 다시 확인\n",
+    "        try:\n",
+    "            news_info = get_news_info(url)\n",
+    "            if news_info:\n",
+    "                save_news_to_json(news_info)\n",
+    "        except Exception as e:\n",
+    "            print(\"오류 발생:\", e)\n",
+    "        time.sleep(60)  # 60초마다 페이지 갱신\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    url = \"https://www.investing.com/news/cryptocurrency-news/\"\n",
-    "    long_polling(url)"
+    "    main()"
    ]
   }
  ],
